# client-server

./: CMakeLists.txt
client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp
server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
